--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tsparticles": "^3.8.1",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
